# pypack

./: .gitignore  AGENTS.md  LICENSE.md  README.md  pypack  pypack.py  pyproject.toml  stub.c
.github/workflows/: ci.yml
examples/hello/hello/: __main__.py
examples/script/: greeter.py
examples/withdeps/myapp/: __main__.py
examples/withpyproject/: pyproject.toml
examples/withpyproject/myapp/: __main__.py
src/pypack/: __init__.py
tests/: test_pypack.py
