[project]
name = "pypack"
version = "0.5.0"
description = "Single-binary Python apps, powered by uv"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
scripts.pypack = "pypack:main"

[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[tool.uv.build-backend]
data=["src/pypack/stub.c"]

[dependency-groups]
dev = [
    "pytest",
    "pytest-xdist>=3.8.0",
    "ruff",
]
